radar font size option & font background